--- a/ui/html/partials/navbar.html
+++ b/ui/html/partials/navbar.html
@@ -13,6 +13,9 @@
       <div class="md:flex space-x-8">
         <a href="#" class="text-white hover:text-gray-200">Home</a>
         <a href="#" class="text-white hover:text-gray-200">About</a>
+        {{if .CurrentUser}}
+        <a href="/users" class="text-white hover:text-gray-200">Users</a>
+        {{end}}
         <a href="#" class="text-white hover:text-gray-200">Contact</a>
       </div>
       <!-- Login/Logout -->
