--- a/ui/html/partials/navbar.html
+++ b/ui/html/partials/navbar.html
@@ -12,7 +12,7 @@
       <!-- Centre - Nav Links -->
       <div class="md:flex space-x-8">
         {{with .CurrentUser}}
-        <a href="/track/files" class="text-white hover:text-gray-200">Files</a>
+        <a href="/gpxfiles" class="text-white hover:text-gray-200">Files</a>
         {{end}}
         <a href="#" class="text-white hover:text-gray-200">Home</a>
         <a href="#" class="text-white hover:text-gray-200">About</a>
