first stab at collections. create form..

--- a/ui/html/partials/navbar.html
+++ b/ui/html/partials/navbar.html
@@ -12,6 +12,7 @@
       <!-- Centre - Nav Links -->
       <div class="md:flex space-x-8">
         {{with .CurrentUser}}
+          <a href="/collection/new" class="text-white hover:text-gray-200">New Collection</a>
           <a href="/gpxfiles" class="text-white hover:text-gray-200">Files</a>
           <a href="/users" class="text-white hover:text-gray-200">Users</a>
         {{end}}
