--- a/ui/html/partials/navbar.html
+++ b/ui/html/partials/navbar.html
@@ -1,10 +1,11 @@
 {{define "navbar"}}
 <!-- Navbar -->
 <nav class="bg-green-600 text-white shadow-lg">
-  <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+  <div class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-8">
     <div class="flex justify-between h-16 items-center">
       <!-- Left Side - Brand Logo or Name -->
       <div class="flex items-center">
+        <img src="/static/img/logo.png" alt="Page Logo" class="h-14 w-auto">
         <a href="/" class="text-2xl font-semibold text-white hover:text-gray-200">
           Tracks
         </a>
